# rust-socksd

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  PKGBUILD  README.md  SECURITY_AUDIT.md  SECURITY_REMEDIATION.md  config.yml.example  rusty-socks.install  rusty-socks.service
.cargo/: config.toml
.github/workflows/: docker-publish.yml  release.yml
AUR/: .SRCINFO  PKGBUILD  PKGBUILD.in  rust-socksd.install  rusty-socks.install
config/: config.yml.example  config.yml.journald.example  rust-socksd.service  rust-socksd.sysusers.conf  rusty-socks.service  rusty-socks.sysusers.conf  users.yml.example
debian/: changelog  control  copyright  debhelper-build-stamp  files  postinst  postrm  rules  rust-socksd.postrm.debhelper  rusty-socks.postrm.debhelper
debian/rusty-socks/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/rusty-socks/etc/rusty-socks/: config.yml  users.yml
src/: admin.rs  config.rs  http_proxy.rs  lib.rs  main.rs  metrics.rs  server.rs  socks5.rs  upstream.rs
src/auth/: ldap.rs  mod.rs  pam.rs  simple.rs  sql.rs  utils.rs
src/config/: user_config.rs
tools/: update_changelogs.sh
